# ledger-solana-app-v2

./: .gitignore  Cargo.toml  README.md  package.json  squads-v4.codama.json  squads-v4.pruned.codama.json
app-integration-tests/: Cargo.toml
app-integration-tests/src/: main.rs
cli/: Cargo.toml  package.json  tsconfig.json
cli/src/: apdu.rs  apdu.ts  cli.ts  constants.rs  constants.ts  derivation.rs  derivation.ts  lib.rs  main.rs  rpc.rs  squads.ts  transport.rs  transport.ts
cli/test/: apdu.test.ts  derivation.test.ts  speculos.integration.test.ts  squads.test.ts
codama-parser/: Cargo.toml
codama-parser/src/: lib.rs
idls/: README.md  associated-token-account.codama.json  compute-budget.codama.json  system.codama.json  token.codama.json
ledger-app/: Cargo.toml  Makefile  ledger_app.toml
ledger-app/.cargo/: config.toml
ledger-app/src/: app.h  idls.rs  main.c  main.rs  solana.rs  squads.rs  squads_tx.c  squads_tx.h  squads_tx.rs  squads_types.rs  storage.c  storage.h  storage.rs  ui.c  ui.h
ledger-app/src/app_ui/: address.rs  idl_import.rs  idl_settings.rs  menu.rs  review_scroller.rs  solana.rs  squads.rs
scripts/: build-ledger.sh  prune-codama.jq  run-speculos.sh  speculos-ui.ts  update-idls.sh
solana-message-light/: Cargo.toml
solana-message-light/src/: lib.rs
testdata/: sample-program.codama.json  sample-program.pruned.codama.json
