[package]
name = "app-integration-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
bs58 = "0.5.1"
clap = { version = "4.5.39", features = ["derive"] }
ledger-solana-cli = { path = "../cli" }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
solana-instruction = "3.4.0"
solana-message = { version = "3.1.0", features = ["bincode"] }
solana-pubkey = "4.2.0"
