[package]
name = "ledger-squads-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bs58 = "0.5.1"
clap = { version = "4.5.39", features = ["derive", "env"] }
hidapi = "2.6.3"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
hex = "0.4.3"

[[bin]]
name = "ledger-squads-cli"
path = "src/main.rs"

[[bin]]
name = "speculos-ui"
path = "src/bin/speculos_ui.rs"

